Fix horizontal scrolling

--- a/src/assets/style/Carousel.module.scss
+++ b/src/assets/style/Carousel.module.scss
@@ -19,8 +19,10 @@
   overflow-x: scroll;
   padding-bottom: 15px;
   height: 100%;
-  scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+  scroll-padding-left: 100px;
+  scroll-padding-right: 100px;
 
   & > div:last-child {
     padding-right: 25px;
@@ -41,3 +43,4 @@
     border-radius: 2px;
   }
 }
+
